--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "tailwind-merge": "^2.5.2"
   },
   "devDependencies": {
+    "daisyui": "^4.12.14",
     "eslint": "^8",
     "eslint-config-next": "14.2.13",
     "postcss": "^8",
